# controllers/logins.js
@@ -1,3 +1,4 @@
+const ObjectId = require('mongoose').ObjectId;
 const userSchema = require('../models/logins');
 
 //GETS ALL LOGINS
@@ -10,13 +11,13 @@ async function getAllLogins(req, res) {
   }
 }
 
-//GETS A SPECIFIC POST
+//GETS A SPECIFIC LOGIN
 async function getOneLogin(req, res) {
   try {
-    const post = await userSchema.find({ username: req.params.username });
+    const post = await userSchema.findById(req.params.postId);
     res.status(200).json(post);
   } catch (err) {
-    res.status(500).json({ message: err });
+    res.status(500).json({ message: 'Must use a valid user ID.' });
   }
 }
 
@@ -33,8 +34,34 @@ async function createLogin(req, res) {
     res.status(500).json({ message: err });
   }
 }
+
+//UPDATE A LOGIN
+async function updateLogin(req, res) {
+  try {
+    const updatedPost = await userSchema.findByIdAndUpdate(
+      req.params.postId,
+      req.body
+    );
+    res.status(204).json(updatedPost);
+  } catch (err) {
+    res.status(500).json({ message: err });
+  }
+}
+
+//DELETE A LOGIN
+async function deleteLogin(req, res) {
+  try {
+    const removedPost = await userSchema.deleteOne({ _id: req.params.postId });
+    res.status(200).json(removedPost);
+  } catch (err) {
+    res.status(500).json({ message: err });
+  }
+}
+
 module.exports = {
   getAllLogins,
   getOneLogin,
   createLogin,
+  updateLogin,
+  deleteLogin,
 };
