# routes/users.js
@@ -2,15 +2,16 @@ const express = require('express');
 const router = express.Router();
 
 const usersController = require('../controllers/users');
+const validation = require('../middleware/validate');
 
 router.get('/', usersController.getAllUsers);
 
 router.get('/:postId', usersController.getOneUser);
 
-router.post('/', usersController.createUser);
+router.post('/', validation.user, usersController.createUser);
 
-//router.put('/:postId', usersController.updateContact);
+router.put('/:postId', validation.user, usersController.updateUser);
 
-//router.delete('/:postId', usersController.deleteContact);
+router.delete('/:postId', usersController.deleteUser);
 
 module.exports = router;
